...
        JdrNexusLogo(
            modifier = Modifier.size(140.dp),
        )
      }
      // Application name and subtitle.
      Text(
          text = "JDRNexus",
          fontFamily = FontFamily.Serif,
          fontSize = 40.sp,
          textAlign = TextAlign.Center,
          color = colors.onSecondary,
      )
      Spacer(modifier = Modifier.height(8.dp))
...
          modifier = Modifier.fillMaxWidth(),
      )
      Spacer(modifier = Modifier.height(16.dp))

      // Email field.
      Text(
          text = "Email address",
          fontWeight = FontWeight.Medium,
          modifier = Modifier.fillMaxWidth(),
          color = colors.onSecondary,
      )
      Spacer(Modifier.height(10.dp))

...
              ),
      )
      Spacer(modifier = Modifier.height(20.dp))

      // Password field.
      Text(
          text = "Password",
          fontWeight = FontWeight.Medium,
          modifier = Modifier.fillMaxWidth(),
          color = colors.onSecondary,
      )

      Spacer(modifier = Modifier.height(10.dp))
...
      // button in case of forgotten password
      TextButton(
          onClick = forgotPassword,
          modifier = Modifier.align(Alignment.End).testTag(C.Tag.sign_in_forgot_password),
      ) {
        Text(
            text = "Forgot password ?",
            color = colors.primary,
        )
      }
      Spacer(Modifier.height(4.dp))
      // Sign-in button to sign in to the app .
      Button(
...
              color = colors.onPrimary,
              strokeWidth = 2.dp,
          )
        } else {
          Row(verticalAlignment = Alignment.CenterVertically) {
            Text(
                text = "Sign In",
                fontSize = 18.sp,
                fontWeight = FontWeight.Bold,
            )
            Spacer(Modifier.width(12.dp))
            Icon(
                imageVector = Icons.AutoMirrored.Filled.ArrowForward,
...
        TextButton(
            onClick = onSignUp,
            modifier = Modifier.testTag(C.Tag.sign_in_sign_up),
            contentPadding = PaddingValues(2.dp),
        ) {
          Text(
              "Sign up",
              color = colors.primary,
              fontWeight = FontWeight.Bold,
          )
        }
      }
    }
...
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.Center,
        modifier = Modifier.fillMaxWidth(),
    ) {
      Image(
          painter = painterResource(id = R.drawable.google_logo),
          contentDescription = "Google Logo",
          modifier = Modifier.size(30.dp).padding(end = 8.dp),
          colorFilter = ColorFilter.tint(logo),
      )

      Text(
          text = "Sign in with Google",
...
