...
              color = colors.onPrimary,
              strokeWidth = 2.dp,
          )
        } else {
          Row(verticalAlignment = Alignment.CenterVertically) {
            Text(
                text = "Register",
                fontSize = 18.sp,
                fontWeight = FontWeight.Bold,
            )
            Spacer(Modifier.width(12.dp))
            Icon(
                imageVector = Icons.AutoMirrored.Filled.ArrowForward,
...
        TextButton(
            onClick = onSignInScreen,
            modifier = Modifier.testTag(C.Tag.sign_up_sign_in),
            contentPadding = PaddingValues(2.dp),
        ) {
          Text(
              "Log in",
              color = colors.primary,
              fontWeight = FontWeight.Bold,
          )
        }
      }
    }
...
